[package]
name = "simple-mikrotik-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
hickory-server = "0.24.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde_json = "1.0.114"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.clap]
version = "~4.4"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.24"
features = ["json"]

[dependencies.figment]
version = "0.10.14"
features = ["toml", "env"]

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
